Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Nitwit</h1>
-        <p>Scans Twitter or Github for available handles</p>
+        <p>Scan Twitter or Github for available handles</p>
 
         <p class="view"><a href="https://github.com/nellore/nitwit">View the Project on GitHub <small>nellore/nitwit</small></a></p>
 
@@ -28,10 +28,7 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a id="nitwit-v010" class="anchor" href="#nitwit-v010" aria-hidden="true"><span class="octicon octicon-link"></span></a>nitwit v0.1.0</h1>
-
-<p>Scans Twitter or Github for available handles from a word list. Requires Python 2.x and <a href="http://docs.python-requests.org/en/latest/">requests</a>.</p>
+        <p>Requires Python 2.x and <a href="http://docs.python-requests.org/en/latest/">requests</a>.</p>
 
 <h1>
 <a id="possibilities" class="anchor" href="#possibilities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Possibilities</h1>
